--- a/song-service/src/main/resources/application.yml
+++ b/song-service/src/main/resources/application.yml
@@ -9,8 +9,11 @@ spring:
     hibernate:
       format_sql: true
       ddl-auto: update
+    properties:
+      hibernate:
+        default_schema: public
   datasource:
-    url: jdbc:postgresql://localhost:5433/song-db
+    url: jdbc:postgresql://song-db:5432/song-db
     username: postgres
     password: postgres
     driver-class-name: org.postgresql.Driver
