--- a/song-service/src/main/resources/application.yml
+++ b/song-service/src/main/resources/application.yml
@@ -8,11 +8,13 @@ spring:
     show-sql: true
     hibernate:
       format_sql: true
-      ddl-auto: update
+    properties:
+      hibernate:
+        default_schema: public
   datasource:
-    url: jdbc:postgresql://localhost:5433/song-db
-    username: postgres
-    password: postgres
+    url: ${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5433/song_db}
+    username: ${SPRING_DATASOURCE_USERNAME:postgres}
+    password: ${SPRING_DATASOURCE_PASSWORD:postgres}
     driver-class-name: org.postgresql.Driver
 
 logging:
