--- a/.env
+++ b/.env
@@ -10,5 +10,9 @@ POSTGRES_PASSWORD=postgres
 RESOURCE_DB_NAME=resource_db
 SONG_DB_NAME=song_db
 
-# Service URLs
+# Eureka Server Configuration
+EUREKA_SERVER_PORT=8761
+EUREKA_CLIENT_SERVICE_URL=http://eureka-server:8761/eureka/
+
+# Service URLs (for fallback when Eureka is not available)
 SONG_SERVICE_URL=http://song-service:8084
