--- a/compose.yaml
+++ b/compose.yaml
@@ -1,4 +1,13 @@
 services:
+  eureka-server:
+    build:
+      context: ./eureka-server
+      dockerfile: Dockerfile
+    ports:
+      - "8761:8761"
+    environment:
+      EUREKA_SERVER_PORT: ${EUREKA_SERVER_PORT}
+
   resource-db:
     image: postgres:16-alpine
     environment:
@@ -31,19 +40,25 @@ services:
       SPRING_DATASOURCE_URL: ${RESOURCE_DB_URL}
       SPRING_DATASOURCE_USERNAME: ${POSTGRES_USER}
       SPRING_DATASOURCE_PASSWORD: ${POSTGRES_PASSWORD}
+      EUREKA_CLIENT_SERVICE_URL: ${EUREKA_CLIENT_SERVICE_URL}
       SONG_SERVICE_URL: ${SONG_SERVICE_URL}
     depends_on:
       - resource-db
+      - eureka-server
 
   song-service:
     build:
       context: ./song-service
       dockerfile: Dockerfile
     ports:
-      - "8084:8084"
+      - "8084"
     environment:
       SPRING_DATASOURCE_URL: ${SONG_DB_URL}
       SPRING_DATASOURCE_USERNAME: ${POSTGRES_USER}
       SPRING_DATASOURCE_PASSWORD: ${POSTGRES_PASSWORD}
+      EUREKA_CLIENT_SERVICE_URL: ${EUREKA_CLIENT_SERVICE_URL}
     depends_on:
       - song-db
+      - eureka-server
+    deploy:
+      replicas: 2
