--- a/resource-service/src/main/resources/application.yml
+++ b/resource-service/src/main/resources/application.yml
@@ -12,6 +12,15 @@ spring:
     password: ${SPRING_DATASOURCE_PASSWORD:postgres}
     driver-class-name: org.postgresql.Driver
 
+eureka:
+  client:
+    service-url:
+      defaultZone: ${EUREKA_CLIENT_SERVICE_URL:http://localhost:8761/eureka/}
+    fetch-registry: true
+    register-with-eureka: true
+  instance:
+    prefer-ip-address: true
+
 logging:
   level:
     org:
@@ -21,6 +30,3 @@ logging:
           descriptor:
             sql:
               BasicBinder: TRACE
-
-song-service:
-  url: ${SONG_SERVICE_URL:http://localhost:8084}
